:bug: fix text align when mobile

--- a/modules/footer/footer.base.scss
+++ b/modules/footer/footer.base.scss
@@ -61,6 +61,15 @@
   }
 
   .footer-bottom {
+    @include respond-to(sm) {
+      .address {
+        p {
+          text-align: right;
+        }
+      }
+    }
+
+
     @include font-size(14px);
 
     background-color: $footer-copyright-color;
@@ -69,12 +78,6 @@
     p {
       line-height: 1.5;
       padding: 3px 0;
-    }
-
-    .address {
-      p {
-        text-align: right;
-      }
     }
   }
 
